[package]
name = "bork_craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Egui dependencies
eframe = { version = "0.19.0" }
egui_extras = { version = "0.19.0", features = ["image"]}

# Others
image = { version = "0.24", features = ["jpeg", "png"] }
