[package]
name = "bork_craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Egui dependencies
eframe = { version = "0.19.0" }
egui_extras = { version = "0.19.0", features = ["image"]}

# Others
image = { version = "0.24", features = ["jpeg", "png"] }


# Serde
serde = { version = "1.0" }
serde_derive = "1.0"
serde_json = "1.0"


# Http Dependencies
ureq = { version = "2.5.0", features = ["json"] }

# Time
chrono = "0.4.24"

# Async
poll-promise = {version = "0.2.0", features = ["tokio"] }
tokio = "1.26.0"